--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "this is a live course",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -23,5 +22,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "browserslist": [
+    "last 2 chrome versions"
+  ]
 }
